@@ -3,7 +3,6 @@ package com.flashcard.flashback.exception;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.lang.NonNullApi;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -11,7 +10,6 @@ import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 @ControllerAdvice
@@ -19,19 +17,19 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
 
     @ExceptionHandler({EntityNotFoundException.class})
     public ResponseEntity<Object> handleEntityNotFoundException(RuntimeException e) {
-        ErrorResponse errorResponse = new ErrorResponse(Arrays.asList(e.getMessage()));
+        ErrorResponse errorResponse = new ErrorResponse(List.of(e.getMessage()));
         return new ResponseEntity<>(errorResponse, HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler({UnauthorizedDataDeleteException.class, UnauthorizedDataCreateException.class})
     public ResponseEntity<Object> handleUnauthorizedDataActionException(RuntimeException e) {
-        ErrorResponse errorResponse = new ErrorResponse(Arrays.asList(e.getMessage()));
+        ErrorResponse errorResponse = new ErrorResponse(List.of(e.getMessage()));
         return new ResponseEntity<>(errorResponse, HttpStatus.UNAUTHORIZED);
     }
 
     @ExceptionHandler({SavedCollectionDuplicateException.class})
     public ResponseEntity<Object> handleSavedCollectionDuplicateException(RuntimeException e) {
-        ErrorResponse errorResponse = new ErrorResponse(Arrays.asList(e.getMessage()));
+        ErrorResponse errorResponse = new ErrorResponse(List.of(e.getMessage()));
         return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
     }
 
